tests/ui/fail_indexed_placeholder.stderr
error: invalid template literal
 --> tests/ui/fail_indexed_placeholder.rs:3:12
  |
3 |     value: "Hello {0}",
  |            ^^^^^^^^^^^
