tests/ui/fail_indexed_placeholder.rs
rusty18n::define_i18n_fallback! {
    FailIndexedPlaceholder => en
    value: "Hello {0}",
}

fn main() {}
